--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
    
     <title>Living Your Life Producciones</title>
+    <meta name="Home" content="Pagina de inicio de la productora de eventos electronicos Living Your Life">
+    <meta name="Keywords" content="Eventos, Electronica, Musica, Valores, Naturaleza, Dj, Pioneer, Fiesta">
 </head>
 <body>
     <header>
@@ -50,17 +52,18 @@
           </div>
         </nav>
           
-          <!-- carrusel de imagenes-->
+        <!-- carrusel de imagenes-->
+        <div class="container">
           <div id="carouselExampleFade" class="carousel slide carousel-fade">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/img-1.jpg" class="d-block w-100" alt="imagen de un evento">
+                <img src="img/index/img-1.jpg" class="d-block w-100" alt="imagen de un evento">
               </div>
               <div class="carousel-item">
-                <img src="img/img-2.jpg" class="d-block w-100" alt="imagen de un evento">
+                <img src="img/index/img-2.jpg" class="d-block w-100" alt="imagen de un evento">
               </div>
               <div class="carousel-item">
-                <img src="img/img-4.jpg" class="d-block w-100" alt="imagen de un evento">
+                <img src="img/index/img-3 (2).jpg" class="d-block w-100" alt="imagen de un evento">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -72,6 +75,8 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+        </div>
+
 
     </header>
 
@@ -81,12 +86,16 @@
         
         <h1 class="box-model"> Living Your Life Producciones </h1>
         <p class="box-model">
-            Con sede en Tucumán, el objetivo convertir a la provincia en el epicentro de la música electrónica. Fundada por un apasionado de la música y con experiencia en festivales internacionales, nos destacamos por ofrecer experiencias únicas y presentar a los mejores artistas del mundo en la región, centrándose en la calidad y la innovación en cada producción. Cada edición de los eventos de R9 Producciones es una combinación de experiencias únicas Los eventos son una fusión de elementos excepcionales que brindan a los asistentes una experiencia inolvidable, sin importar la edición en la que se encuentren. El objetivo es crear experiencias memorables que trasciendan en el tiempo. Con un enfoque en la calidad y la innovación, nos esforzamos por organizar eventos que dejen una marca duradera en la memoria de los participantes, sin importar cuándo se realicen. 
+            Con sede en Tucumán, el objetivo convertir a la provincia en el epicentro de la música electrónica. Fundada por un apasionado de la música y con experiencia en festivales internacionales, nos destacamos por ofrecer experiencias únicas y presentar a los mejores artistas del mundo en la región, centrándose en la calidad y la innovación en cada producción. Cada edición de los eventos de LYL Producciones es una combinación de experiencias únicas Los eventos son una fusión de elementos excepcionales que brindan a los asistentes una experiencia inolvidable, sin importar la edición en la que se encuentren. El objetivo es crear experiencias memorables que trasciendan en el tiempo. Con un enfoque en la calidad y la innovación, nos esforzamos por organizar eventos que dejen una marca duradera en la memoria de los participantes, sin importar cuándo se realicen. 
         </p>
+        <p>Cosnideramos que <b>conectar la musica con la naturaleza</b> genera experiencias de vida y aumenta nuestro amor por el mundo.</p>
+        <p>Pasaron por nuestra cabina dj's reconocidos localmente como mundialmente. Algunos fueron: Gus Filgueira, Mariano Mellino, Sasha Carassi y varios mas... </p>
       </main>
 
     <footer>
       <p>Todos los derechos reservados.</p>
+      <p>by Villano.</p>
+
     </footer>
 
     <!-- etiqueta del script-->
