--- a/pages/Artistas.html
+++ b/pages/Artistas.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
    
     <title>Artistas</title>
+    <meta name="Artistas" content="Artistas con los que la productora Livin Your Life colaboro">
+    <meta name="Keywords" content="Eventos, Electronica, Musica, Valores, Naturaleza, Dj, Pioneer, Fiesta">
 </head>
 <body>
     <header>
@@ -33,16 +35,16 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/Artistas.html">Artistas</a>
+                <a class="nav-link active" aria-current="page" href="../pages/artistas.html">Artistas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Contactos.html">Contactos</a>
+                <a class="nav-link" href="../pages/contactos.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Eventos.html">Eventos</a>
+                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Sobre Nosotros.html">Sobre Nosotros</a>
+                <a class="nav-link" href="../pages/sobre nosotros.html">Sobre Nosotros</a>
               </li>
             </ul>
           </div>
@@ -52,41 +54,44 @@
 
   <!-- Etiqueta para contenido principal-->
 
-  <main>
+  <main class="main-artistas">
       <h1>Artistas</h1>
-
-      <div class="card" style="width: 18rem;">
-        <img src="../img/sasha carassi.jpeg" class="card-img-top" alt="imagen de sasha carassi">
+      <section class="artistas">
+      <div class="card-1" style="width: 18rem;">
+        <img src="../img/artistas/sasha carassi.jpeg" class="card-img-top" alt="imagen de sasha carassi">
         <div class="card-body">
-          <h5 class="card-title">Sasha Carassi</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h2 class="card-title">Sasha Carassi</h2>
+          <p class="card-text">Sasha Carassi es un DJ y productor de música electrónica. Nació en Napoli, Italia. Aunque tenía algunos años practicando musicalmente, se dio a conocer en 2010, al empezar a promover sus producciones en diferentes sellos discográficos locales. La competencia en el género no es muy sencilla debido a que ya existían muchos artistas reconocidos y expertos en el tema de la producción electrónica.
+          </p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="../img/gus filgueira.jpeg" class="card-img-top" alt="imagen de gus filgueira">
+      <div class="card-2" style="width: 18rem;">
+        <img src="../img/artistas/gus filgueira.jpeg" class="card-img-top" alt="imagen de gus filgueira">
         <div class="card-body">
-          <h5 class="card-title">Gus filgueira</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h3 class="card-title">Gus filgueira</h3>
+          <p class="card-text">Gustavo Filgueira es uno de los máximos sinónimos de electrónica en el norte del país. Desde Tucumán, supo ser residente durante 14 años de un club clásico como La Boite. A lo largo de su carrera compartió cabina con destacados artistas, como Richie Hawtin, John Digweed y en fechas más recientes con Juan Hansen, Rafael Cerato, Giorgia Angiuli y otros. </p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="../img/marcelo vasami.jpeg" class="card-img-top" alt="imagen de marcelo vasami">
+      <div class="card-3" style="width: 18rem;">
+        <img src="../img/artistas/marcelo vasami.jpeg" class="card-img-top" alt="imagen de marcelo vasami">
         <div class="card-body">
-          <h5 class="card-title">Marcelo vasami</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h4 class="card-title">Marcelo vasami</h4>
+          <p class="card-text">Su interés por la música electrónica se remonta a su adolescencia, principalmente por escuchar música house. Nacido en 1984, ser DJ se convirtió en algo natural para él y pronto también lo fue producir. Primero, tocando en fiestas privadas para amigos. Luego, cada vez con más frecuencia en bares y clubes de toda Argentina. Hasta ahora, ha compartido cabina con DJs talentosos internacionales como Pole Folder, Naveen G, Neil Quigley, Osamu M, Martin Garcia, Soundexile, D-Nox y muchos otros.</p>
         </div>
       </div>
-      <div class="card" style="width: 18rem;">
-        <img src="../img/mariano mellino.jpeg" class="card-img-top" alt="imagen de mariano mellino">
+      <div class="card-4" style="width: 18rem;">
+        <img src="../img/artistas/mariano mellino.jpeg" class="card-img-top" alt="imagen de mariano mellino">
         <div class="card-body">
           <h5 class="card-title">Mariano Mellino</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Mariano Mellino nació en Buenos Aires en 1985 y comenzó su carrera en la música electrónica a la corta edad de 19 años, influenciado por artistas como Hernán Cattaneo, Nick Warren, John Digweed, Sasha, Danny Howells y muchos otros exponentes del house y sus derivados, con quien años después compartiría cabina en numerosos gigs y festivales.</p>
         </div>
       </div>
+    </section>
     </main>
 
   <footer>
     <p>Todos los derechos reservados.</p>
+    <p>by Villano.</p>
   </footer>
 
   <!-- etiqueta del script-->
