--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -6,19 +6,21 @@
     <!-- link de bt-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Lllamado del Css -->
+    <!-- lllamado del Css -->
     <link rel="stylesheet" href="../css/style.css">
     
-    <!-- Link de tipografia-->
+    <!-- link de tipografia-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
    
     <title>Contactos</title>
+    <meta name="Contacto" content="Pagina de contacto con la productora Living Your Life">
+    <meta name="Keywords" content="Eventos, Electronica, Musica, Valores, Naturaleza, Dj, Pioneer, Fiesta">
 </head>
 <body>
     <header>
-      <!-- Menu de navegacion -->
+      <!-- menu de navegacion -->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
@@ -33,16 +35,16 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Artistas.html">Artistas</a>
+                <a class="nav-link" href="../pages/artistas.html">Artistas</a>
               </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../pages/Contactos.html">Contactos</a>
+                  <a class="nav-link active" aria-current="page" href="../pages/contactos.html">Contactos</a>
                 </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Eventos.html">Eventos</a>
+                <a class="nav-link" href="../pages/eventos.html">Eventos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Sobre Nosotros.html">Sobre Nosotros</a>
+                <a class="nav-link" href="../pages/sobre nosotros.html">Sobre Nosotros</a>
               </li>
             </ul>
           </div>
@@ -54,14 +56,23 @@
 
   <main>
       
-      <h1 class="box-model"> Living Your Life Producciones </h1>
-      <p class="box-model">
-          Con sede en Tucumán, el objetivo convertir a la provincia en el epicentro de la música electrónica. Fundada por un apasionado de la música y con experiencia en festivales internacionales, nos destacamos por ofrecer experiencias únicas y presentar a los mejores artistas del mundo en la región, centrándose en la calidad y la innovación en cada producción. Cada edición de los eventos de R9 Producciones es una combinación de experiencias únicas Los eventos son una fusión de elementos excepcionales que brindan a los asistentes una experiencia inolvidable, sin importar la edición en la que se encuentren. El objetivo es crear experiencias memorables que trasciendan en el tiempo. Con un enfoque en la calidad y la innovación, nos esforzamos por organizar eventos que dejen una marca duradera en la memoria de los participantes, sin importar cuándo se realicen. 
+      <h1 class="tit-consul"> Consultas </h1>
+      <p class="text-consul">
+          Tenes alguna consulta y/o sugerencia acerca de los eventos o nuestra empresa? Consultanos!.  
       </p>
+      <div class="consultas">
+        <label for="exampleFormControlInput1" class="form-label">Tu Email</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <div class="consultas">
+        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
     </main>
 
   <footer>
     <p>Todos los derechos reservados.</p>
+    <p>by Villano.</p>
   </footer>
 
   <!-- etiqueta del script-->
