--- a/pages/Eventos.html
+++ b/pages/Eventos.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
    
     <title>Eventos</title>
+    <meta name="Eventos" content="Eventos realizados por la productora Living Your Life">
+    <meta name="Keywords" content="Eventos, Electronica, Musica, Valores, Naturaleza, Dj, Pioneer, Fiesta">
 </head>
 <body>
     <header>
@@ -33,16 +35,16 @@
                 <a class="nav-link" href="../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Artistas.html">Artistas</a>
+                <a class="nav-link" href="../pages/artistas.html">Artistas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Contactos.html">Contactos</a>
+                <a class="nav-link" href="../pages/contactos.html">Contactos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../pages/Eventos.html">Eventos</a>
+                <a class="nav-link active" aria-current="page" href="../pages/eventos.html">Eventos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../pages/Sobre Nosotros.html">Sobre Nosotros</a>
+                <a class="nav-link" href="../pages/sobre nosotros.html">Sobre Nosotros</a>
               </li>
             </ul>
           </div>
@@ -52,16 +54,29 @@
 
   <!-- Etiqueta para contenido principal-->
 
-  <main>
+  <main class="main-eventos">
       
-      <h1 class="box-model"> Living Your Life Producciones </h1>
-      <p class="box-model">
-          Con sede en Tucumán, el objetivo convertir a la provincia en el epicentro de la música electrónica. Fundada por un apasionado de la música y con experiencia en festivales internacionales, nos destacamos por ofrecer experiencias únicas y presentar a los mejores artistas del mundo en la región, centrándose en la calidad y la innovación en cada producción. Cada edición de los eventos de R9 Producciones es una combinación de experiencias únicas Los eventos son una fusión de elementos excepcionales que brindan a los asistentes una experiencia inolvidable, sin importar la edición en la que se encuentren. El objetivo es crear experiencias memorables que trasciendan en el tiempo. Con un enfoque en la calidad y la innovación, nos esforzamos por organizar eventos que dejen una marca duradera en la memoria de los participantes, sin importar cuándo se realicen. 
-      </p>
+      <h1 class="tit-eventos">Nuestros Eventos </h1>
+      <div class="img-uno">
+        <img class="pic" src="../img/eventos/evento cad.jpg" alt="imagen de un evento en el cadillal">
+      </div>
+      <div class="img-dos">
+        <img class="pic" src="../img/eventos/evento mariano.jpg" alt="imagen de un evento de Mariano Mellino">
+      </div>
+      <div class="ima-tres">
+        <img class="pic" src="../img/eventos/Hernan Evento.jpg" alt="imagen de un evento de Hernan Cattaneo">
+      </div>
+      <div class="img-cuatro">
+        <img class="pic" src="../img/eventos/r9 evento.jpg" alt="imagen de un evento de R9">
+      </div>
+      <div class="img-cinco">
+        <img class="pic" src="../img/eventos/Sasha evento.jpg" alt="imagen de un evento de Sasha Carassi">
+      </div>
     </main>
 
   <footer>
     <p>Todos los derechos reservados.</p>
+    <p>by Villano.</p>
   </footer>
 
   <!-- etiqueta del script-->
