--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <title>Living Your Life Producciones</title>
     <meta name="Home" content="Pagina de inicio de la productora de eventos electronicos Living Your Life">
     <meta name="Keywords" content="Eventos, Electronica, Musica, Valores, Naturaleza, Dj, Pioneer, Fiesta">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Living Your Life Producciones">
+    <meta property="og:url" content="https://leandroevilla.github.io/Proyecto-Final-Living-Your-Life-Producciones-Leandro-Emanuel-Villa/">
+    <meta property="og:image" content="https://github.com/leandroevilla/Proyecto-Final-Living-Your-Life-Producciones-Leandro-Emanuel-Villa/blob/master/img/index/img-3%20(2).jpg">
+    <meta property="og:description" content="Somos una productora de eventos electronicos en Tucuman Argentina. ">
 </head>
 <body>
     <header>
